trunk/Archive2/6b/7caf32c93cf068/output
main.cpp:8:38: error: invalid conversion from 'const int**' to 'int* const*' [-fpermissive]
 int * const *p1 = make<int const **>(); 
                                      ^
